--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "ODM2MjIzNzA3MTE3NzgxMDQz.GGNpLQ.7XkWQCDrZxLEWRFaLuGcntixeEuB2mpAl4YzyA",
-  "client_id": "836223707117781043",
-  "guildId": "1276932730260557864",
+  "token": "YOUR TOKEN",
+  "client_id": "YOUR CLIEND ID",
+  "guildId": "YOUR GUILDID",
   "excepnocap" : "SALON QUI PERMET DE VOUS NOTIFIER SI YA UN BUG A VOUS DE CHOISIRS SI VOUS VOULEZ LE METTRE OU PAS"
 }
